--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -20,7 +20,7 @@
     
    
 
-  <!--
+  
      <div class="form-group row">
       <label for="inputPassword3" class="col-sm-2 col-form-label">Items</label>
       <div class="col-sm-10" formArrayName="items">
@@ -31,15 +31,15 @@
       <input class="form-control" type="text" formControlName="itemId" id="task{{i}}">
       <input class="form-control" type="text" formControlName="itemName" id="task{{i}}">
       <input class="form-control" type="text" formControlName="itemDesc" id="task{{i}}">
-      <input class="checkbox" formControlName="itemDone"> 
+      <input class="checkbox" type="checkbox"      formControlName="itemDone"> 
       Mark as Done
     </div>
     </div>
 
     </div>
-  -->
+  
 
-  <div class="form-group row">
+  <!--<div class="form-group row">
     <label for="inputPassword3" class="col-sm-2 col-form-label">Items</label>
     <div class="col-sm-10" formArrayName="items">
 
@@ -51,7 +51,7 @@
   </div>
   </div>
 
-  </div>
+  </div>-->
 
   <div class="form-group row">
     <div class="col-sm-2"></div>
