--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -69,6 +69,7 @@
       <div class="col-sm-10">
         <button type="submit" class="btn btn-primary" [disabled]="!checkoutForm.valid">Check out</button>
         <button type="submit" class="btn btn-link" (click)="resetForm();">Clear</button>
+        <button type="submit" class="btn btn-link" (click)="addNewItem();">Add Row</button>
       </div>
     </div>
   </form>
