--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -13,4 +13,7 @@
 
 <div *ngIf="msgTrue">Contact created successfully</div>
 
-<button (click)="addNewContact()"> Add New Contact</button>
+<button (click)="addNewContact()"> Add New Contact</button> <br/>
+
+
+<button (click)="updateContact(3)"> Update contactId:3</button>
