--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -16,4 +16,9 @@
 <button (click)="addNewContact()"> Add New Contact</button> <br/>
 
 
-<button (click)="updateContact(3)"> Update contactId:3</button>
+<button (click)="updateContact(3);"> Update contactId:3</button>
+
+<div>
+
+    <button (click)="deleteContact(4);"> Delete contactId:4</button>
+</div>
