--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -21,4 +21,6 @@
 <div>
 
     <button (click)="deleteContact(4);"> Delete contactId:4</button>
-</div>
+</div> <br/>
+
+<button (click)="getContact()"> Get Contact</button>
